added secured communication with public and private keys for sending messages and some test cases